--- a/nakaw.html
+++ b/nakaw.html
@@ -35,8 +35,8 @@
 				
 				<div class="ask">
 						
-												<p> <span class="crush">HI CRUSH</span> <br>
-																gusto kita, can i court you?</p>
+												<p> <span class="crush">Hi Jean</span> <br>
+																Can you be my valentine?</p>
 								<div class="btn">
 <a href="https://valhndsm.github.io/Proposalv2/yes.html"><button id="btn1">Yes</button>		</a>			    <button id="btn2">No</button>
 								</div>				
